--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
         <div class="row item">
           <div class="col-md-4 col-sm-6 col-xs-12">
             <a href="https://www.dlut.edu.cn/" target="_blank">
-              <img src="images/UMD-logo.png" class="img-responsive edu-img">
+              <img src="images/dlut.jpeg" class="img-responsive edu-img">
             </a>
           </div>
           <div class="col-md-8 col-sm-6 col-xs-12 item-info">
@@ -206,7 +206,7 @@
         <div class="row item">
           <div class="col-md-4 col-sm-6 col-xs-12">
             <a href="https://www.dlut.edu.cn/" target="_blank">
-              <img src="images/shanghaitech.png" class="img-responsive edu-img">
+              <img src="images/dlut.jpeg" class="img-responsive edu-img">
             </a>
           </div>
           <div class="col-md-8 col-sm-6 col-xs-12 item-info">
@@ -225,7 +225,7 @@
         <div class="row item">
           <div class="col-md-4 col-sm-6 col-xs-12">
             <a href="http://www.neau.edu.cn/" target="_blank">
-              <img src="images/tongji.png" class="img-responsive edu-img">
+              <img src="images/nau.jpeg" class="img-responsive edu-img">
             </a>
           </div>
           <div class="col-md-8 col-sm-6 col-xs-12 item-info">
