--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
               <!-- <div class="address">199 Huanke Road, Pudong District, Shanghai, China</div>
               <div class="zipcode">201210</div> -->
 
-              <div class='email'>malong's email</div>
+              <div class='email'>malone94319@gmail.com</div>
             </div>
 
 <!--            <div class="social-links">-->
