--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
         <div class="row item">
           <div class="col-md-4 col-sm-6 col-xs-12">
             <a href="http://www.neau.edu.cn/" target="_blank">
-              <img src="images/nau.jpeg" class="img-responsive edu-img">
+              <img src="images/nau.jpg" class="img-responsive edu-img">
             </a>
           </div>
           <div class="col-md-8 col-sm-6 col-xs-12 item-info">
